--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -20,7 +20,7 @@ spring:
   jpa:
     show-sql: true
     database: SQL_SERVER 
-    hibernate:      ddl-auto: update       naming:        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+    hibernate:      ddl-auto: create       naming:        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
     properties.hibernate.dialect: org.hibernate.dialect.SQLServer2008Dialect
     database-platform: org.hibernate.dialect.SQLServer2008Dialect
         
