--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ spring:
     show-sql: true
     database: SQL_SERVER 
     hibernate:      ddl-auto: update       naming:        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
+        strategy: org.hibernate.cfg.ImprovedNamingStrategy
     properties.hibernate.dialect: org.hibernate.dialect.SQLServer2008Dialect
     database-platform: org.hibernate.dialect.SQLServer2008Dialect
         
