--- a/src/main/java/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/java/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,10 @@
     "name": "spring.ddd",
     "type": "java.lang.String",
     "description": "A description for 'spring.ddd'"
+  },
+  {
+    "name": "spring.jpa.hibernate.implicit-strategy",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.jpa.hibernate.implicit-strategy'"
   }
 ]}
