--- a/bin/main/application.yml
+++ b/bin/main/application.yml
@@ -14,14 +14,18 @@ spring:
       force: true
   datasource:
      driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
-     url: jdbc:sqlserver://localhost:1433;Database=Project_Data
-     username: sa
-     password: j98390941
+     url: jdbc:sqlserver://172.16.2.82:1433;Database=Project_Data
+     username: leadtek
+     password: leadtek
+     
+     #url: jdbc:sqlserver://localhost:1433;Database=Project_Data
+     #username: sa
+     #password: j98390941
   jpa:
     show-sql: true
     database: SQL_SERVER 
     hibernate:      
-        ddl-auto: update  
+        ddl-auto: create  
     properties.hibernate.dialect: org.hibernate.dialect.SQLServer2008Dialect
     database-platform: org.hibernate.dialect.SQLServer2008Dialect
   
