--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,5 @@ hs_err_pid*
 bin/main/application.yml
 *.yml
 src/main/resources/application.yml
+src/main/resources/application.yml
+bin/main/application.yml
