--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,6 @@ bin/main/application.yml
 .gradle/5.4.1/fileContent/fileContent.lock
 .gradle/5.4.1/executionHistory/executionHistory.lock
 .gradle/5.4.1/executionHistory/executionHistory.bin
+.gradle/5.4.1/executionHistory/executionHistory.lock
+.gradle/5.4.1/fileHashes/fileHashes.lock
+.gradle/buildOutputCleanup/buildOutputCleanup.lock
